--- a/index.html
+++ b/index.html
@@ -181,8 +181,10 @@ footer {
 </div>
 
 <footer>
-    <span>版本: 1.0.0</span>
-    <span>瀏覽人數: <span id="visitorCount">0</span></span>
+    <span>version: 1.0.0</span>
+    <span>
+        <img src="https://hits.sh/powwhuang.github.io/quarter.svg?style=flat-square&label=Visitors&color=007ec6" alt="Visitor Count">
+    </span>
 </footer>
 
 <script>
