--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ footer {
 </header>
 
 <nav class="top-menu">
-    <a href="index.html">Home</a>
+    <a href="./index.html">Home</a>
     <a href="#">About</a>
 </nav>
 
