--- a/classic_DIP/histogram_equalization.html
+++ b/classic_DIP/histogram_equalization.html
@@ -40,14 +40,19 @@
 
   <!-- 中間 Video -->
   <div id="video-section">
-    <div class="video-wrapper" id="player"></div>
+    <div class="video-wrapper">
+      <iframe id="player" 
+        src="https://www.youtube.com/embed/7hFTRDXPnvM?enablejsapi=1"
+        frameborder="0" allowfullscreen>
+      </iframe>
+    </div>
   </div>
 
   <!-- 右側 Description -->
   <div id="description">
     <p>
       <strong>Brief Description:</strong> Histogram equalization is an image processing technique used to improve contrast.
-      The objective is to design a transformation that redistributs the pixel intensity values so that they span the full range more evenly.
+      The objective is to design a transformation that redistributes the pixel intensity values so that they span the full range more evenly.
       This makes the histogram of the resulting image becomes closer to a uniform (flat) distribution, making details in both dark and bright regions easier to see.
     </p>
     <img src="./histogram_equalization.png" alt="example of histogram equalization">
@@ -59,35 +64,35 @@
   Histogram Equalization (2025/09/02).
 </div>
 
-<!-- YouTube IFrame API -->
-<script src="https://www.youtube.com/iframe_api"></script>
+<!-- 控制影片播放 -->
 <script>
-let player;
-
-// API 會自動呼叫這個函式
-function onYouTubeIframeAPIReady() {
-  player = new YT.Player('player', {
-    height: '360',
-    width: '640',
-    videoId: '7hFTRDXPnvM',
-    events: {
-      'onReady': onPlayerReady
-    }
-  });
+function seekTo(seconds) {
+  const iframe = document.getElementById('player');
+  iframe.contentWindow.postMessage(
+    JSON.stringify({
+      event: "command",
+      func: "seekTo",
+      args: [seconds, true]
+    }),
+    "*"
+  );
+  iframe.contentWindow.postMessage(
+    JSON.stringify({
+      event: "command",
+      func: "playVideo",
+      args: []
+    }),
+    "*"
+  );
 }
 
-// player 建立完成後才綁定 timeline
-function onPlayerReady(event) {
-  document.querySelectorAll("#timeline li").forEach(item => {
-    item.addEventListener("click", () => {
-      const time = parseInt(item.getAttribute("data-time"));
-      if (player && player.seekTo) {
-        player.seekTo(time, true);
-        player.playVideo();
-      }
-    });
+// 綁定 timeline
+document.querySelectorAll("#timeline li").forEach(item => {
+  item.addEventListener("click", () => {
+    const time = parseInt(item.getAttribute("data-time"));
+    seekTo(time);
   });
-}
+});
 </script>
 </body>
 </html>
