--- a/classic_DIP/histogram_equalization.html
+++ b/classic_DIP/histogram_equalization.html
@@ -5,13 +5,36 @@
 
 <!-- 引入 Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    
+
 <!-- 引入 Akaya Kanadaka font-->
 <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
 
 <!-- 導入外部 CSS -->
 <link rel="stylesheet" href="unit.css">
 
+<style>
+/* 讓影片自適應 RWD */
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#timeline li {
+  cursor: pointer;
+  padding: 5px;
+  transition: background 0.3s;
+}
+#timeline li:hover {
+  background: #f0f0f0;
+}
+</style>
 </head>
 <body>
 <div id="container">
@@ -66,24 +89,38 @@
 
 <!-- 控制影片播放 -->
 <script>
+let playerReady = false;
+
+// 告訴 YouTube 這個 iframe 準備接收 API 訊息
+window.onload = function() {
+  const iframe = document.getElementById("player");
+  iframe.contentWindow.postMessage(JSON.stringify({
+    event: "listening",
+    id: "player"
+  }), "*");
+};
+
+// 監聽來自 YouTube 的 ready 訊號
+window.addEventListener("message", function(event) {
+  if (event.data && typeof event.data === "string" && event.data.indexOf("onReady") > -1) {
+    playerReady = true;
+  }
+});
+
+// 跳轉時間 + 播放
 function seekTo(seconds) {
-  const iframe = document.getElementById('player');
-  iframe.contentWindow.postMessage(
-    JSON.stringify({
-      event: "command",
-      func: "seekTo",
-      args: [seconds, true]
-    }),
-    "*"
-  );
-  iframe.contentWindow.postMessage(
-    JSON.stringify({
-      event: "command",
-      func: "playVideo",
-      args: []
-    }),
-    "*"
-  );
+  if (!playerReady) return; // 確保 ready 才執行
+  const iframe = document.getElementById("player");
+  iframe.contentWindow.postMessage(JSON.stringify({
+    event: "command",
+    func: "seekTo",
+    args: [seconds, true]
+  }), "*");
+  iframe.contentWindow.postMessage(JSON.stringify({
+    event: "command",
+    func: "playVideo",
+    args: []
+  }), "*");
 }
 
 // 綁定 timeline
