--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@ footer {
 
     <div class="toggle-button" id="toggleBtn">❮</div>
 
-    <iframe id="pdfFrame" class="viewer" src="main.pdf" name="pdfFrame"></iframe>
+    <iframe id="pdfFrame" class="viewer" src="main.pdf" name="pdfFrame"
+        allow="autoplay; encrypted-media; fullscreen">
+    </iframe>
 </div>
 
 <footer>
