--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <nav class="top-menu">
     <a href="./index.html">Home</a>
+    <a href="./units.html" target="pdfFrame">Units</a>
     <a href="#">About</a>
 </nav>
 
@@ -51,7 +52,7 @@
 </footer>
 
 <!-- 先載入 menuData.js，再載入 index.js -->
-<script src="./unit_data.js"></script>
+<script src="./unit_tree.js"></script>
 
 <script>
 // === DOM ===
